--- a/server/db/config/config.json
+++ b/server/db/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "postgres", 
+    "password": "niq1234",
+    "database": "bqapi",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "dialectOptions": {
@@ -13,9 +13,9 @@
     }
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "postgres",
+    "password": "niq1234",
+    "database": "bqapi",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "dialectOptions": {
@@ -26,9 +26,9 @@
     }
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "postgres",
+    "password": "niq1234",
+    "database": "bqapi",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "dialectOptions": {
